# interactive-git-versioneer

./: .gitignore  CHANGELOG.md  CITATION.cff  FUNDING.yml  LICENSE  Makefile  README.md  config.ini  mkdocs.yml  prompt.txt  prompt_tags.txt  pyproject.toml
.github/workflows/: auto-tag.yml
docs/: api.md  index.md  troubleshooting-cicd.md  usage.md
docs/configuracion/: modelos_ollama.md
docs/desarrollo/: integracion_openai.md  tests_ejecucion.md
docs/modules/: core_ai.md  core_git_ops.md  modelos.md  releases.md  tagger.md
docs/operaciones/: cicd_diagnostico.md  git_ramas.md  limpieza_tags_duplicados.md  resolucion_errores.md  version_bump.md
docs/referencia/: api_documentacion.md  comandos.md  configuracion_ia.md  logging.md
docs/usuario/: guia_inicio_rapido.md
jenkins/: configure-igv.sh  deploy.sh
scripts/: install_menu.py
src/interactive_git_versioneer/: __init__.py  main.py
src/interactive_git_versioneer/config/: __init__.py  config.py  menu.py
src/interactive_git_versioneer/core/: __init__.py  ai.py  git_ops.py  logger.py  models.py  ui.py  version_ops.py
src/interactive_git_versioneer/domain/: __init__.py
src/interactive_git_versioneer/domain/models/: __init__.py  commit.py
src/interactive_git_versioneer/domain/repositories/: __init__.py  git_repository.py
src/interactive_git_versioneer/domain/services/: __init__.py  ai_service.py
src/interactive_git_versioneer/main_menu/: __init__.py  main_menu.py
src/interactive_git_versioneer/releases/: __init__.py  changelog_actions.py  changelog_gen.py  changelog_progress.py  gh_auth.py  gh_releases.py  menus.py  sync.py
src/interactive_git_versioneer/tags/: __init__.py  actions.py  ai.py  menus.py  tagger.py  ui.py  views.py
src/interactive_git_versioneer/tui/: app.py  styles.tcss
tests/: test_clean_duplicates.py  test_config.py  test_git_ops.py  test_models.py
